# big-ram

./: .cursorrules  .donotwatchlist  .watchlist  README.md  agent.py  bios.md  build_plan.yaml  comparison.md  index.md  laptops.md  last_week_prices.csv  mini-pcs.md  models.yaml  perf_test.md  preflight-checklist.md  pyproject.toml  rationale.md  requirements.txt  spec_sheets.md  thermals.md  weekly_report.md
.github/workflows/: test.yml  weekly-report.yml
docs/: agent_vs_ide.md  evaluation.md  project_reflections.md
lib/: bios.md  comparison.md  cpu_gpu_roadmap.md  credibility_analysis_04mini.md  credibility_analysis_o3.md  diff_report.md  laptops.md  mini-pcs.md  price_history.md  prompt_eng_tiers.md  rationale.md  skylord.md
src/bigram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/reportgen/: cli.py  diff.py  markdown.py  pipeline.py  rss.py  scrape.py
tests/: test_diff.py  test_markdown.py  test_pipeline.py  test_rss.py  test_scrape.py
tests/data/: fake_feed.xml
